--- a/registration-view/src/main/res/layout/register_view.xml
+++ b/registration-view/src/main/res/layout/register_view.xml
@@ -3,18 +3,37 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:orientation="vertical">
 
-    <ProgressBar
+    <LinearLayout
         android:id="@+id/register_loader"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="gone"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/text_color"
+            android:textSize="22sp"
+            android:padding="16dp"
+            android:text="@string/creating_new_account"/>
+
+        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
+            style="@style/ProgressBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/register_message"
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:gravity="center"/>
 </FrameLayout>
