Register error on snackbar

--- a/registration-view/src/main/res/layout/register_view.xml
+++ b/registration-view/src/main/res/layout/register_view.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/register_coordinator"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    android:orientation="vertical">
+    android:background="@color/background">
 
     <LinearLayout
         android:id="@+id/register_loader"
@@ -17,11 +17,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textStyle="bold"
+            android:padding="16dp"
+            android:text="@string/creating_new_account"
             android:textColor="@color/text_color"
             android:textSize="22sp"
-            android:padding="16dp"
-            android:text="@string/creating_new_account"/>
+            android:textStyle="bold"/>
 
         <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
             style="@style/ProgressBar"
@@ -29,11 +29,4 @@
             android:layout_height="wrap_content"
             android:indeterminate="true"/>
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/register_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:gravity="center"/>
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
