--- a/android-commons/src/main/res/values/colors.xml
+++ b/android-commons/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background_dark">#0090ff</color>
+    <color name="background_dark">#393939</color>
     <color name="background">#c6dae2</color>
     <color name="text_color">#303010</color>
 
